# chief-of-staff

./: .gitignore  CLAUDE.md  README.md
docs/: arch-planning.md  chief-of-staff-planning-prompt.md  setup-guide.md  voicemode-install.md
docs/plans/: 2026-03-01-voice-interface-design.md  2026-03-01-voice-interface-plan.md  2026-03-02-elt-deployment.md  2026-03-02-substack-digest.md  2026-03-03-voicemode-quickkey-design.md
indexes/: concepts.yaml  entities.yaml  recent.yaml  tags.yaml
mcp/imessage/: LICENSE  README.md  pyproject.toml  server.py
policies/: anti-pattern-guards.md  confidentiality-triggers.md  context-discipline.md  decision-posture.md  goal-referencing.md  message-send-gate.md  voice-output.md
scripts/: cos-launch.sh  install-quickkey.sh  install-voicemode.sh  voicemode-quickkey.applescript
skills/substack-digest/: SKILL.md
state/config/: company.template.yaml  company.yaml  identity.template.yaml  identity.yaml  modes.yaml  tiers.yaml  tools.template.yaml  tools.yaml  voice.template.yaml  voice.yaml
state/domain/: goals.yaml  schedules.yaml  tasks.yaml
state/domain/contacts/: _index.yaml
state/domain/projects/: _index.yaml
state/memory/: memory.yaml
workflows/definitions/: morning-briefing.yaml  setup.yaml  substack-digest.yaml
workflows/schemas/: calendar-review.yaml  goal-review.yaml  inbox-scan.yaml  newsletter-digest.yaml  task-review.yaml
